--- a/src/Pages/HomePage/containers/BannerCarousel/bannerCarousel.css
+++ b/src/Pages/HomePage/containers/BannerCarousel/bannerCarousel.css
@@ -1,59 +1,107 @@
 .bannerCarousel .carousel {
-    position: relative;
-  }
-  
-  .bannerCarousel .carousel-indicators li {
-    width: 15px;
-    height: 15px;
-    border-radius: 100%;
-  }
-  
-  .bannerCarousel .carousel-item:after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.1);
-  }
-  
-  .bannerCarousel .carousel-inner img {
-    width: 100%;
-    height: 680px;
-  }
-  
-  .bannerCarousel .carousel-caption {
-    /* bottom: 100px; */
-    top: 30%;
-    left: 10%;
-    text-align: left;
-  }
-  
-  .bannerCarousel .carousel-caption h3 {
-    font-family: "Satisfy", cursive;
-    font-weight: bolder;
-    font-size: 4rem;
-    margin-bottom: 1rem;
-  }
-  
-  .bannerCarousel .carousel-caption p {
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
-    font-size: 1.25rem;
-  }
-  
+  position: relative;
+}
+
+.bannerCarousel .carousel-indicators li {
+  width: 15px;
+  height: 15px;
+  border-radius: 100%;
+}
+
+.bannerCarousel .carousel-item:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.bannerCarousel .carousel-inner img {
+  width: 100%;
+  height: 680px;
+}
+
+.bannerCarousel .carousel-caption {
+  /* bottom: 100px; */
+  top: 30%;
+  left: 10%;
+  text-align: left;
+}
+
+.bannerCarousel .carousel-caption h3 {
+  font-family: "Satisfy", cursive;
+  font-weight: bolder;
+  font-size: 4rem;
+  margin-bottom: 1rem;
+}
+
+.bannerCarousel .carousel-caption p {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 1.25rem;
+}
+
+.bannerCarousel .carousel-control-prev {
+  height: 50px;
+  width: 50px;
+  margin-left: 50px;
+  top: 45%;
+}
+
+.bannerCarousel .carousel-control-next {
+  height: 50px;
+  width: 50px;
+  margin-right: 50px;
+  top: 45%;
+}
+
+/* ============================= media queries css =========================*/
+
+/* Extra small devices (phones, 1200px and down) */
+@media only screen and (max-width: 1200px) {
   .bannerCarousel .carousel-control-prev {
-    height: 50px;
-    width: 50px;
-    margin-left: 50px;
-    top: 50%;
+    margin-left: 12px;
   }
-  
   .bannerCarousel .carousel-control-next {
-    height: 50px;
-    width: 50px;
-    margin-right: 50px;
-    top: 50%;
+    margin-right: 12px;
   }
+}
+
+/* Extra small devices (phones, 992px and down) */
+@media only screen and (max-width: 992px) {
+  .bannerCarousel .carousel-inner img {
+    height: 580px;
+  }
+  .bannerCarousel .carousel-caption h3 {
+    font-size: 2.875rem;
+  }
+}
+
+/* Extra small devices (phones, 576px and down) */
+@media only screen and (max-width: 576px) {
+  .bannerCarousel .carousel-inner img {
+    height: 360px;
+  }
+  .bannerCarousel .carousel-caption {
+    top: unset;
+    text-align: center;
+  }
+  .bannerCarousel .carousel-caption h3 {
+    font-size: 2.875rem;
+  }
+  .bannerCarousel .carousel-caption p {
+    display: none;
+  }
+  .bannerCarousel .carousel-caption button {
+    display: none;
+  }
+  .bannerCarousel .carousel-control-prev {
+    display: none;
+  }
+  .bannerCarousel .carousel-control-next {
+    display: none;
+  }
+}
