--- a/src/containers/Navbar/navbar.css
+++ b/src/containers/Navbar/navbar.css
@@ -55,6 +55,15 @@
   margin-right: 1rem;
 }
 
-.dummyNavbar{
+.dummyNavbar {
   height: 80px;
+}
+
+/* ============================= media queries css =========================*/
+
+/* Extra small devices (phones, 992px and down) */
+@media only screen and (max-width: 992px) {
+  .navbar {
+    padding: 0rem;
+  }
 }
