--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* body:not(.modal-open){
+  padding-right: 0px !important;
+} */
+
 body,
 p,
 h1,
